lab7C_complete/test/tests.txt
-(lg((lne+cos0+sin(Pi/2)+tan(Pi/4))*2.5*10)-4)^9/(-(1*511+1))*lg(10^10)*ln(e^(-10^(-1)))|1.000000
-1|-1.000000
+1|syntax error
10-10*0.2|8.000000
|syntax error
ln(e^20)|20.000000
lg1000000000|9.000000
-(log((ln2,7182818284590452353602874713527+cos0+sin(3,1415926535897932384626433832795/2)+tg(3,1415926535897932384626433832795/4))*2.5*10)-4)^9/(-(1*511+1))*log(10^10)*ln(2,7182818284590452353602874713527^(-10^(-1)))|1.000000
sincos(pi/2)|0.000000
lgln(e^100)|2.000000
tg1-sin1/cos1|0.000000
cos10^2+sin10^2|1.000000
log(20*sin(pi/2))/cos(pi/2)|division by zero
log(0)|division by zero
ln(0)|division by zero
^2|syntax error
sin/cos1|syntax error
